<resources>
    <string name="app_name">Shadow-master</string>
    <string name="action_settings">Settings</string>
    <string name="email_address_enter">Enter your email address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="medical_aid_no">Medical Aid Member no</string>
    <string name="security_provider_contact">Security company contact no</string>
    <string name="id_number">Id number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="password_enter">Password</string>
    <string name="lnk_buy_shadow"> No SHADOW?<a href="http://www.google.com"><b><u> Buy now</u></b></a></string>
    <string name="lnk_medical_provider_info"><a href="http://www.google.com"><u>  Why do we need this</u></a></string>
    <string name="lnk_forgot_password"><a href="http://www.google.com"><u> Existing account?</u></a></string>
    <string name="title_activity_test">TestActivity</string>
    <string name="register"><u>Register</u></string>

    <string name="medical_aid_provider_prompt">Medical Aid Provider</string>

    <string-array name="medical_aid_provider_arrays">
        <item>Discovery Health</item>
        <item>Momentum Health</item>
        <item>Profmed</item>
        <item>PruHealth</item>
        <item>Selfmed</item>
        <item>Govmed</item>
        <item>Affinity Health</item>
    </string-array>

    <string-array name="security_provider_arrays">
        <item>ADT</item>
        <item>Wolf Security</item>
        <item>Zambli</item>
    </string-array>

    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="facebook_app_id">527907880696051</string>
    <string name="title_activity_home_address">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_address">AddressActivity</string>

</resources>
