<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signup_layout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_login"
    android:paddingBottom="17dp"
    android:paddingTop="5dp">

    <EditText
        android:id="@+id/edtSignup_first_name"
        style="@style/Shadow.Text.signup"
        android:layout_width="match_parent"
        android:layout_marginLeft="18dp"
        android:background="@drawable/selector_edit_corners"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:paddingLeft="18dp"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/edtSignup_last_name"
        style="@style/Shadow.Text.signup"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_below="@+id/edtSignup_first_name"
        android:background="@drawable/selector_edit_corners"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:paddingBottom="2dp"
        android:paddingRight="5dp"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/edtSignup_mobile_no"
        style="@style/Shadow.Text.signup"
        android:layout_width="match_parent"
        android:layout_below="@+id/edtSignup_last_name"
        android:background="@drawable/selector_edit_corners"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:paddingBottom="2dp"
        android:paddingRight="5dp"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/edtId_number"
        style="@style/Shadow.Text.signup"
        android:layout_width="match_parent"
        android:layout_below="@+id/edtSignup_mobile_no"
        android:layout_marginBottom="0dp"
        android:background="@drawable/selector_edit_corner_top"
        android:ems="10"
        android:hint="@string/id_number"
        android:inputType="textEmailAddress"
        android:paddingRight="5dp"
        android:textColor="@color/colorBlack" />

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_below="@+id/edtId_number"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@color/com_shadow_login_help_button_label"></View>

    <EditText
        android:id="@+id/edtDate_of_birth"
        style="@style/Shadow.Text.signup"
        android:layout_width="match_parent"
        android:layout_below="@+id/txt_or"
        android:layout_marginTop="-7dp"
        android:background="@drawable/selector_edit_corner_bottom"
        android:ems="10"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        android:paddingBottom="2dp"
        android:paddingRight="5dp"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/txt_or"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_below="@+id/view_line"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="-10dp"
        android:background="@color/colorTransparent"
        android:text="OR"
        android:textSize="11sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spnMedical_aid_provider"
        style="@style/Shadow.Spinner.signup"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_below="@+id/edtDate_of_birth"
        android:background="@drawable/selector_edit_corners"
        android:textAlignment="viewStart"
        android:entries="@array/medical_aid_provider_arrays"
        android:touchscreenBlocksFocus="true" />

    <EditText
        android:id="@+id/edtMedical_aid_no"
        style="@style/Shadow.Text.signup"
        android:layout_width="match_parent"
        android:layout_below="@+id/spnMedical_aid_provider"
        android:background="@drawable/selector_edit_corners"
        android:ems="10"
        android:hint="@string/medical_aid_no"
        android:inputType="phone"
        android:paddingBottom="2dp"
        android:paddingRight="5dp"
        android:textColor="@color/colorBlack" />

</RelativeLayout>
