<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="17dp"
    android:paddingTop="5dp">

    <EditText
        android:id="@+id/edtEmail_address_register"
        style="@style/Shadow.Text.Email"
        android:layout_width="300dp"
        android:layout_height="26dp"
        android:background="@drawable/selector_edit_corner_top"
        android:drawableLeft="@drawable/com_shadow_email_black"
        android:ems="10"
        android:hint="@string/email_address_enter"
        android:inputType="textEmailAddress"
        android:paddingRight="5dp"
        android:textColor="@color/colorBlack" />

    <View
        android:id="@+id/view_line"
        android:layout_width="300dp"
        android:layout_height="1dip"
        android:layout_below="@+id/edtEmail_address_register"
        android:background="@color/com_shadow_login_help_button_label" />

    <EditText
        android:id="@+id/edtPassword_register"
        style="@style/Shadow.Text.Email"
        android:layout_width="300dp"
        android:layout_height="26dp"
        android:layout_below="@+id/view_line"
        android:background="@drawable/selector_edit_corner_bottom"
        android:drawableLeft="@drawable/com_shadow_locked_black"
        android:ems="10"
        android:hint="@string/password_enter"
        android:inputType="textPassword"
        android:paddingBottom="2dp"
        android:paddingRight="5dp"
        android:textColor="@color/colorBlack" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtPassword_register"
        android:layout_alignRight="@+id/edtPassword_register"
        android:layout_below="@+id/edtPassword_register"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|fill"
        android:paddingTop="4dp">

        <Button
            android:id="@+id/btn_login"
            style="@style/Shadow.Button.ThirdPartyLogin"
            android:layout_width="38dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/linearLayout"
            android:background="@drawable/selector_button_login"
            android:drawableLeft="@drawable/com_shadow_pencil_white" />

        <Button
            android:id="@+id/btn_login2"
            style="@style/Shadow.Button.ThirdPartyLogin"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/linearLayout"
            android:layout_marginRight="2dp"
            android:background="@drawable/selector_button_login_text"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColorLink="@color/colorWhite" />

    </LinearLayout>

</RelativeLayout>
